--- a/index.html
+++ b/index.html
@@ -69,6 +69,25 @@
             background-color: #45a049;
         }
 
+        /* enlarge leaflet zoom controls */
+        .leaflet-bar .leaflet-control-zoom a {
+            width: 44px;
+            height: 44px;
+            line-height: 44px;
+            font-size: 18px;
+            border-radius: 6px;
+            padding: 0;
+        }
+        /* increase clickable area and add subtle shadow */
+        .leaflet-bar a {
+            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+        }
+        /* optional color tweak */
+        .leaflet-control-zoom a {
+            background-color: #fff;
+            color: #333;
+        }
+
         body.has-results .info-column {
             display: block;
         }
